data-plant/data-plant/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: data-plant
  labels:
    app: data-plant
    service: data-plant
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: data-plant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-plant
  labels:
    app: data-plant
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-plant
      version: v1
  template:
    metadata:
      labels:
        app: data-plant
        version: v1
    spec:
      serviceAccountName: data-plant
      containers:
        - name: data-plant
          image: quay.io/gfulton/data-plant:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: data-plant-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
    - http:
        paths:
          - path: /data-analysing
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-cleaning
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-collecting
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-evaluating
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-extracting
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-labeling
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-preparing
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-querying
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-splitting
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-storing
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-transforming
            backend:
              serviceName: data-plant
              servicePort: 8080
          - path: /data-validating
            backend:
              serviceName: data-plant
              servicePort: 8080
---
